--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,28 @@
   
   body {
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+    margin: 1px;
   }
   header, footer {
     background-color: darkblue;
     color: white;
-    padding: 5px;
+    padding: 6px;
     text-align: center;
   }
   header h1{
-    text-shadow: 2px 2px 2px slategrey;
+    text-shadow: 3px 3px 3px black;
     margin: 8px 0;
     
   }
   header ul{
-    margin: 0;
-    padding: 0;
-    font-size: 0;
+    margin: 1;
+    padding: 1;
+    font-size: 1;
   }
   header li{
     list-style: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 18px;
   }
   header a{
     padding: 10px;
@@ -37,7 +37,7 @@
   }
   header a:hover{
     background-color: lightblue;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 17px 17px 17px 17px;
   }
   header nav{
     background-color:blue;
@@ -49,7 +49,7 @@
     color: white;
   }
   footer a:hover{
-    color: orange;
+    color: black;
     background-color:white;
   }
   main{
