--- a/css/stylepart2.css
+++ b/css/stylepart2.css
@@ -15,7 +15,7 @@
     text-align: center;
   }
   header h1{
-    text-shadow: 2px 2px 2px black;
+    text-shadow: 2px 2px 2px slategray;
     margin: 8px 0;
     
   }
@@ -27,7 +27,7 @@
   header li{
     list-style: none;
     display: inline-block;
-    font-size: 18px;
+    font-size: 16px;
   }
   header a{
     padding: 10px;
@@ -49,12 +49,12 @@
     color: white;
   }
   footer a:hover{
-    color: purple;
+    color: orange;
     background-color:white;
   }
   main{
     background-color:lightblue;
-    width: 100%;
+    width: 80%;
     text-align: center;
     margin: 0 auto;
     padding: 20px;
